fix mana symbol alignment
fixes #90

--- a/css/cards.css
+++ b/css/cards.css
@@ -63,7 +63,6 @@
 }
 
 .mana i {
-  vertical-align: baseline;
   box-shadow: -0.5px 1px 0 #000;
   margin-left: 1px;
 }
